# ps-dist

./: .gitignore  CHANGES.md  LICENSE  README.md  changes.md  pyproject.toml  requirements.txt
docs/: Gemfile  _config.yaml  _config.yml  gallery.md  index.md  test.ipynb
examples/: cloud.ipynb  discrete.ipynb  dist.ipynb  distributions.ipynb  examples_bunch.ipynb  examples_image.ipynb  examples_visualization.ipynb  examples_visualization_discrete.ipynb  examples_visualization_image.ipynb  hist.ipynb  image.ipynb  plot_hist.ipynb  plot_points.ipynb  points.ipynb  slicing.ipynb  visualization.ipynb
psdist/: __init__.py  _version.py  ap.py  bunch.py  cloud.py  core.py  cov.py  density.py  discrete.py  dist.py  distance.py  distributions.py  grid.py  hist.py  image.py  plotting.py  points.py  utils.py
psdist/plot/: __init__.py  core.py  grid.py  hist.py  points.py  rc.py  utils.py
psdist/visualization/: __init__.py  bunch.py  cloud.py  discrete.py  grid.py  image.py  visualization.py
tests/: test_cloud.py  test_cov.py  test_hist.py  test_image.py  test_plot.py  test_points.py
