[project]
name = "psdist"
authors = [{name = "Austin Hoover"}]
description = "Analysis tools for high-dimensional phase space distributions"
license = {file = "LICENSE"}
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
   "h5py",
   "ipywidgets",
   "matplotlib==3.8.4",
   "numpy",
   "proplot @ git+https://github.com/austin-hoover/proplot@82e1d9c169c73832ee3c917585f4e30a4d378e22",
   "scipy",
   "tqdm",
]

[project.urls]
repository = "https://github.com/austin-hoover/psdist"

[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"