[project]
name = "psdist"
authors = [{name = "Austin Hoover"}]
description = "Analysis tools for high-dimensional phase space distributions"
license = {file = "LICENSE"}
readme = "README.md"
version = "1.0.2"
requires-python = ">=3.10"
dependencies = [
   "h5py",
   "ipywidgets",
   "matplotlib",
   "numpy",
   "proplot @ git+https://github.com/cvanelteren/proplot.git@v0.9.91",
   "scipy",
   "tqdm",
]

[project.urls]
repository = "https://github.com/austin-hoover/psdist"

[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"
